<resources>
    <string name="app_name">"Portfolio "</string>

    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Settings</string>
    <string name="my_nanodegree">My Nanodegree App!</string>
    <string name="spotify_streamer">SPOTIFY STREAMER</string>
    <string name="scores_app">SCORES APP</string>
    <string name="library_app">LIBRARY APP</string>
    <string name="build_it_bigger">BUILD IT BIGGER</string>
    <string name="xyz_reader">XYZ READER</string>
    <string name="capstone">CAPSTONE: MY OWN APP</string>
    <string name="spotify_message">This button will launch my Spotify streamer app</string>
    <string name="scores_message">This button will launch my scores app</string>
    <string name="library_message">This button will launch my library app</string>
    <string name="build_it_bigger_message">This button will launch my build it bigger app</string>
    <string name="xyz_reader_message">This button will launch my XYZ reader app</string>
    <string name="capstone_message">This button will launch my capstone app</string>

</resources>
