<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_nanodegree"
        android:textAppearance="?android:textAppearanceLarge"
       android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
       />

    <Button
        android:id="@+id/btnSpotifyStreamer"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/udacity_orange"
        android:text="@string/spotify_streamer"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:onClick="viewToast"
        />
    <Button
        android:id="@+id/btnScoresApp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/udacity_orange"
        android:text="@string/scores_app"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:onClick="viewToast"
        />
    <Button
        android:id="@+id/btnLibraryApp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/udacity_orange"
        android:text="@string/library_app"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:onClick="viewToast"
        />
    <Button
        android:id="@+id/btnBuildItBigger"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/udacity_orange"
        android:text="@string/build_it_bigger"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:onClick="viewToast"
        />
    <Button
        android:id="@+id/btnXYZReader"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/udacity_orange"
        android:text="@string/xyz_reader"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:onClick="viewToast"
        />
    <Button
        android:id="@+id/btnCapstone"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/red"
        android:text="@string/capstone"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:onClick="viewToast"
        />


</LinearLayout>
